[package]
name = "paspio"
version = "0.1.0"
edition = "2021"
authors = ["Aziz Ben Ali <ba.tahaaziz@gmail.com>"]
description = "A password entropy calculator."
keywords = ["password", "entropy", "utility"]
repository = "https://github.com/grtcdr/paspio"
license = "MIT"
readme = "README.md"

[dependencies]
regex = "1.5.4"

[profile.release]
opt-level = 3
debug = false
