[package]
name = "paspio"
version = "0.2.4"
edition = "2021"
authors = ["Aziz Ben Ali <ba.tahaaziz@gmail.com>"]
description = "A password entropy calculator."
keywords = ["password", "entropy", "utility"]
repository = "https://github.com/grtcdr/paspio"
license = "MIT"
readme = "README.md"

[profile.release]
opt-level = 3
debug = false 
